src/sass/admin-styles.scss
#wp-link-wrap{z-index:999997}
#wp-link-backdrop{z-index:999996}
div.mce-inline-toolbar-grp{z-index:999997 !important}
.pac-container{z-index:999996}

.media-modal{
    z-index: 999999999;
}

// atajos de teclado
.mce-reset.mce-fade.mce-in{z-index:999996 !important}
.mce-floatpanel.mce-window.mce-in{z-index:999997 !important}
// color de texto
.mce-floatpanel.mce-popover.mce-bottom{z-index:999997 !important}
// fix color picker show behind columns
// .uf-field.uf-field-layout-grid.uf-field-type-color { z-index: 9; } dosnt work
// fix select2 show behind modal 
.select2-container { z-index: 170000; }

.truncate {
    display: block;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}


input[name="icon-selector"]{
    display: none;
}
input[name="icon-selector"]+label i{
    font-size: 30px;
    padding: 5px;
    border: 2px solid #fff;
    border-radius: 4px;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    min-width: 52px;
}
input[name="icon-selector"]:checked+label i{
    border-color: #0ea1d9;
    background-color: #0ea1d9;
    color: #fff !important;
}


.short-input input{
    width: auto !important;
}

/*------------------------------------------------------------*/
/*MODAL WINDOW*/
/*------------------------------------------------------------*/
.modalv23 {
    background-color: rgba(0, 0, 0, 0.23);
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    z-index: 100003; 
    &__content {
        z-index: 99991; 
    }
    &__close {
        width: 32px;
        height: 32px;
        position: fixed;
        z-index: 99993;
        bottom: 15px;
        right: 15px;
        cursor: pointer;
        text-align: center; 
    }
    &__close:before {
        content: "X";
        color: #fff;
        font-size: 30px; 
    }
    &::-webkit-scrollbar {
        width: 3px; 
    }
    &::-webkit-scrollbar-track {
        border: 1px solid #000;
        background-color: #000; 
    }
    &::-webkit-scrollbar-thumb {
        background-color: #fff; }
    &.always-centered {
        display: flex;
        align-items: center;
        justify-content: center; 
    }
}


/*------------------------------------------------------------*/
/* MV23 LIBRARY MODAL*/
/*------------------------------------------------------------*/
.mv23-library-modal {
    overflow: auto;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: rgba(0,0,0,0.7);            
    z-index: 160011;            
    // z-index: 159999;            

    .modalv23__content {
        width: 95%;
        max-width: 1000px;
        min-height: 500px;
        margin: 50px auto;
        background-color: #1d2327;
        color: silver;
        border-radius: 8px;
        box-shadow: 0 0 15px rgba(0, 0, 0, 0.23);
        padding: 15px; 
        position: relative;
        overflow: hidden;
    }
    &.loading .modalv23__content{
        background: #1d2327 url("../images/loading2.gif") center no-repeat; 
        background-size: 40px;
        *{
            transition: 500ms all;
            opacity: 0;
            pointer-events: none;
        }
    }
    .ajax-message{
        text-align: center;
        width: 100%;
        &.error{
            border-color: red;
            background-color: transparent;
        }
        p{
            font-size: 20px;
        }
    }
}

/*------------------------------------------------------------*/
/* MV23 LIBRARY - SELECT ITEM MODAL*/ 
/*------------------------------------------------------------*/
.mv23-library{
    &__gallery{
        display: flex;
        flex-wrap: wrap;
    }
    &__item-wrapper{
        width: 200px;
    }
    &__item{
        position: relative;
        padding: 8px;
    }
    &__label{
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        border: 2px solid transparent;
        box-sizing: border-box;
    }
    &__imagen{
        padding-bottom: 65%;
        border: 1px solid #333;
    }
    &__item-wrapper.has-post-thumbnail &__imagen{
        background-size: contain;
        background-repeat: no-repeat;
        background-position: center;
    }
    &__item-wrapper.has-post-thumbnail{
        button[data-action='add-thumbnail']{
            display: none;
        }
    }
    &__item-wrapper:not(.has-post-thumbnail){
        button[data-action='remove-thumbnail']{
            display: none;
        }
    }
    &__footer{
        &>span{
            display: inline-block;
            margin-right: 15px;
        }
    }

    &__control{
        display: none !important;
    }
    &__control:checked+div label{
        border-radius: 6px;
        border-color: green;
    }
    &__control+div+&__actions{
        display: none;
        button[data-action="delete"]{
            background-color: red !important;
            border-color: red !important;
        }
    }
    &__control:checked+div+&__actions{
        display: flex;
        justify-content: space-between;
        position: absolute;
        left: 0;
        bottom: 0;
        background-color: #1d2327;
        width: 100%;
        padding: 15px;
        box-shadow: 0 0 8px 5px rgba(0,0,0,.2);
        text-align: right;
        box-sizing: border-box;
        button:not(.button-primary){
            background-color: #1d2327;
            color: silver
        }
    }
}

/*------------------------------------------------------------*/
/* MV23 LIBRARY - SAVE ITEM MODAL*/ 
/*------------------------------------------------------------*/
.mv23-library-modal.save-form-modal{
    .modalv23__content {
        max-width: 500px;
        min-height: 200px;
        display: flex;
        align-items: center;
    }
}
.mv23-library-save-form{
    width: 100%;
    h2{
        color: silver;
        font-size: 32px;
        text-align: center;
        margin: 0;
        &+p{
            text-align: center;
            justify-content: center;
        }
    }
    form{
        text-align: center;
    }
}

/* show the uf file field in a single line */
.one-lined-file-preview .uf-file{
    display: flex;
}

